--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_auth: ^5.4.0
   cloud_firestore: ^5.4.4
   firebase_storage: ^12.3.4
+  qr_code_scanner: ^1.0.1
 
   # Google Sign In
   google_sign_in: ^6.2.1
@@ -41,10 +42,11 @@ dependencies:
   # File Management
   file_picker: ^6.1.1
   path: ^1.8.3
+  cached_network_image: ^3.3.0
 
   # UI Components
   cupertino_icons: ^1.0.6
-  cached_network_image: ^3.3.0
+
 
   # State Management & Utilities
   provider: ^6.1.1
@@ -56,6 +58,7 @@ dependencies:
 
   # PDF Viewer (for preview)
   syncfusion_flutter_pdfviewer: ^24.1.41
+  flutter_pdfview: ^1.3.2
 
   # Network
   http: ^1.1.2
